# Business-Intelligence

etl_service/: .env.example  .gitignore  README.md  automata_turing.jff  pyproject.toml  requirements.txt
etl_service/docs/: architecture.md  bootstrap_branches_test_schema.sql  recommended_database_fixes.sql
etl_service/outputs/preclean_samples/: branches_preclean_messy.xlsx
etl_service/outputs/semantic_tests/: branches_semantic_test.xlsx  products_semantic_test.xlsx
etl_service/scripts/: check_db.py
etl_service/src/etl_service/: __main__.py
etl_service/src/etl_service/api/: app.py  errors.py
etl_service/src/etl_service/api/controllers/: __init__.py  health_controller.py  import_errors_controller.py  imports_controller.py
etl_service/src/etl_service/core/: config.py  logging.py  progress.py
etl_service/src/etl_service/db/: connection.py  identifiers.py
etl_service/src/etl_service/domain/: enums.py  models.py  process.py
etl_service/src/etl_service/etl/: pipeline.py  registry.py
etl_service/src/etl_service/etl/loaders/: file_loader.py
etl_service/src/etl_service/etl/preclean/: __init__.py  business_vocabulary.py  confidence.py  contextual_mapper.py  data_normalizer.py  field_mapping_engine.py  (+8 more)
etl_service/src/etl_service/repositories/: control_repository.py  dw_repository.py  staging_repository.py
etl_service/src/etl_service/schemas/: imports.py
etl_service/src/etl_service/services/: correction_service.py  import_service.py
etl_service/src/etl_service/utils/: chunks.py
etl_service/src/etl_service/workers/: cli.py  console_progress.py
(+52 files in other folders)
